--- a/styles.css
+++ b/styles.css
@@ -78,3 +78,15 @@
         opacity: 1;
     }
 }
+@media (min-width: 393px) {
+    .launch-time{
+        display: flex;
+    }
+    .launch-time div{
+        flex-basis: 240px;
+    }
+    .launch-time div p{
+        font-size: 60px;
+        margin-bottom: -14px;
+    }
+}
